--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
-			rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
 		<title>Vite App</title>
 	</head>
 	<body>
@@ -20,11 +18,10 @@
 					<div>
 						<h2>Introduction to 3D Models</h2>
 						<p>
-							In this section, we will explore the concept of incorporating multiple 3D models onto a
-							single webpage. 3D models provide a dynamic and interactive way to present content,
-							enhancing user engagement and understanding. Whether you're showcasing products,
-							architectural designs, or virtual environments, integrating multiple 3D models can
-							significantly enrich the user experience.
+							3D models provide a dynamic and interactive way to present content, enhancing user
+							engagement and understanding. Whether you're showcasing products, architectural designs, or
+							virtual environments, integrating multiple 3D models can significantly enrich the user
+							experience.
 						</p>
 					</div>
 					<div class="scene-container"></div>
@@ -34,13 +31,10 @@
 					<div>
 						<h2>Implementing Multiple 3D Models</h2>
 						<p>
-							This section will delve into the practical aspects of embedding multiple 3D models within a
-							webpage. We'll discuss various techniques and tools available for integrating 3D content
-							seamlessly into your website. From using popular libraries like Three.js to leveraging
-							web-based platforms for model hosting and rendering, we'll explore different approaches to
-							achieve your desired outcome. Additionally, we'll address considerations such as performance
-							optimization, cross-browser compatibility, and accessibility to ensure a smooth and
-							inclusive user experience.
+							From using popular libraries like Three.js to leveraging web-based platforms for model
+							hosting and rendering, we'll explore different approaches to achieve your desired outcome.
+							Additionally, we'll address considerations such as performance optimization, cross-browser
+							compatibility, and accessibility to ensure a smooth and inclusive user experience.
 						</p>
 					</div>
 				</div>
@@ -48,11 +42,10 @@
 			<div class="full-width-container">
 				<h1>Advanced 3D Model Interactions</h1>
 				<p style="text-align: center; max-width: 1200px; margin: 0 auto">
-					This section will focus on advanced techniques for enhancing user interactions with 3D models on
-					your webpage. We'll explore concepts such as animation, user-driven manipulation, and real-time data
-					integration. By implementing these advanced interactions, you can create immersive experiences that
-					captivate and engage your audience. We'll also discuss best practices for balancing interactivity
-					with usability, ensuring that your 3D models remain intuitive and user-friendly.
+					We'll explore concepts such as animation, user-driven manipulation, and real-time data integration.
+					By implementing these advanced interactions, you can create immersive experiences that captivate and
+					engage your audience. We'll also discuss best practices for balancing interactivity with usability,
+					ensuring that your 3D models remain intuitive and user-friendly.
 				</p>
 				<div class="full-width-scene-container">
 					<div class="full-width-scene"></div>
